--- a/Frontend_React_Movies/Frontend-Moviearts/src/Container/Components/LayOut/LayOut.scss
+++ b/Frontend_React_Movies/Frontend-Moviearts/src/Container/Components/LayOut/LayOut.scss
@@ -2,5 +2,7 @@
     color: #0A283E;
     align-items: center;
     display: flex;
+    justify-content: center;
     flex-direction: column;
+    border: 1px solid red  ;
 }
