--- a/Frontend_React_Movies/Frontend-Moviearts/src/Container/Components/CartDetails/CartDetails.scss
+++ b/Frontend_React_Movies/Frontend-Moviearts/src/Container/Components/CartDetails/CartDetails.scss
@@ -8,7 +8,7 @@
     right: 0;
 }
 .ul{
-    font-size: 10px;
+    font-size: 12.5px;
     padding: 0%;
     margin: 0;
 }
@@ -19,4 +19,10 @@
     align-items: center;
     padding: 25px 20px;
     border-bottom: 1px solid #aaa;
+}
+.buttonShop{
+
+    text-align: center;
+    margin: 1rem 4.7rem;
+    width: 150px;
 }
