--- a/Frontend_React_Movies/Frontend-Moviearts/src/Container/Components/userCard/UserCard.scss
+++ b/Frontend_React_Movies/Frontend-Moviearts/src/Container/Components/userCard/UserCard.scss
@@ -1,5 +1,7 @@
-.userCard {
-    background-color: cornsilk;
-    justify-content: center;
-    
+.cardUser{
+    border: 1px solid #eee;
+    box-shadow: 0  5px 5px rgba($color: #000000, $alpha: 0.1);
+    width: auto;
+    padding: 10px 15px;
+    border-radius: 15px;
 }
