--- a/Frontend_React_Movies/Frontend-Moviearts/src/Container/Login/Login.scss
+++ b/Frontend_React_Movies/Frontend-Moviearts/src/Container/Login/Login.scss
@@ -4,8 +4,9 @@ div {
     align-items: center;
     flex-direction: column;
     .Profile {
+      
         img {
-            border-top: 1em;
+           
             height: 20em;
             width: 20em;
             border-radius: 100em;
@@ -16,6 +17,17 @@ div {
                 font-family: Arial, Helvetica, sans-serif;
                 font-size: 2em;
             }
+            // .imput{
+            //    input{
+            //        border-radius: 20% ;
+            //        height: 2em;
+            //    }
+            // }
+        }
+        .content-button{
+            display: flexbox;
+            flex-direction: row;
+            border: 1px red solid;
         }
     }
 }
