--- a/Frontend_React_Movies/Frontend-Moviearts/src/Container/ProfileAdmin/ProfileAdmin.scss
+++ b/Frontend_React_Movies/Frontend-Moviearts/src/Container/ProfileAdmin/ProfileAdmin.scss
@@ -1,7 +1,10 @@
-.nav-wrapper {
-    height: 2 em;
-    background-color: brown;
-    
+.Navegador {
+    width: 100vw;
+    background-color: rgb(46, 141, 83);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
     ul {
         display: flex;
         flex-direction: row;
