--- a/Frontend_React_Movies/Frontend-Moviearts/src/Container/ProfileAdmin/ProfileAdmin.scss
+++ b/Frontend_React_Movies/Frontend-Moviearts/src/Container/ProfileAdmin/ProfileAdmin.scss
@@ -1,10 +1,12 @@
 .Navegador {
-    width: 100vw;
-    background-color: rgb(46, 141, 83);
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-
+   
+    .nav-wrapper{
+        width: 100vw;
+        background-color: rgb(46, 141, 83);
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
     ul {
         display: flex;
         flex-direction: row;
@@ -13,4 +15,6 @@
             font-size: 2em;
         }
     }
+
+        
 }
