funcionalidad de eliminado terminada

--- a/Frontend_React_Movies/Frontend-Moviearts/src/Container/Components/Button/Button.scss
+++ b/Frontend_React_Movies/Frontend-Moviearts/src/Container/Components/Button/Button.scss
@@ -6,6 +6,6 @@
     border-radius: 10px;
     cursor: pointer;
     max-width: 100%;
-    margin: auto;
+    margin-right: 1.5em;
     height: 2.5em;
 }
