--- a/Frontend_React_Movies/Frontend-Moviearts/src/Container/Components/Logo/Logo.scss
+++ b/Frontend_React_Movies/Frontend-Moviearts/src/Container/Components/Logo/Logo.scss
@@ -1,7 +1,7 @@
 .imgLogo{
     width: 90px;
     height: 90px;
-    margin: 0;
+    margin: 0.5em;
     padding: 0;
     border-radius: 100em;
     margin-bottom: 0.5em;
