--- a/Frontend_React_Movies/Frontend-Moviearts/src/Container/ProfileAdmin/ProfileAdmin.scss
+++ b/Frontend_React_Movies/Frontend-Moviearts/src/Container/ProfileAdmin/ProfileAdmin.scss
@@ -1,20 +1,22 @@
 .Navegador {
-   
-    .nav-wrapper{
+    .nav-wrapper {
         width: 100vw;
         background-color: rgb(46, 141, 83);
         display: flex;
         flex-direction: row;
-        justify-content: center;
-    }
-    ul {
-        display: flex;
-        flex-direction: row;
-        list-style: none;
-        li {
-            font-size: 2em;
+        justify-content: space-between;
+        align-items: center;
+        .Butones {
+            ul {
+                display: flex;
+                flex-direction: row;
+                list-style: none;
+
+                li {
+                    font-size: 2em;
+                }
+            }
         }
     }
 
-        
 }
