--- a/Frontend_React_Movies/Frontend-Moviearts/src/Container/Components/CartDetails/CartDetails.scss
+++ b/Frontend_React_Movies/Frontend-Moviearts/src/Container/Components/CartDetails/CartDetails.scss
@@ -5,7 +5,7 @@
     box-shadow: 1px 5px 5px rgba($color: #000000, $alpha: .3);
     border-radius: 5px;
     width: 300px;
-    right: 0;
+    right: 2em;
 }
 .ul{
     font-size: 12.5px;
@@ -21,8 +21,11 @@
     border-bottom: 1px solid #aaa;
 }
 .buttonShop{
-
     text-align: center;
     margin: 1rem 4.7rem;
     width: 150px;
+}
+.total{
+    text-align: end;
+    margin-right: 5px;
 }
