--- a/Frontend_React_Movies/Frontend-Moviearts/src/Container/Components/NavBar/NavBar.scss
+++ b/Frontend_React_Movies/Frontend-Moviearts/src/Container/Components/NavBar/NavBar.scss
@@ -7,4 +7,7 @@
     position: relative;
     padding: 0 50px;
     box-shadow: 0 2px 3px rgba($color: #000000, $alpha: .1);
+    .perfil{
+    display: flex;
+}
 }
