--- a/Frontend_React_Movies/Frontend-Moviearts/src/Container/Components/RentalsCard/RentalsCard.scss
+++ b/Frontend_React_Movies/Frontend-Moviearts/src/Container/Components/RentalsCard/RentalsCard.scss
@@ -7,7 +7,7 @@
     width: 15em;
     padding: 10px 15px;
     border-radius: 15px;
-    margin: 1em;
+    margin-bottom: 1em;
     .delete {
         margin-left: 100%;
         .boton-delete {
