--- a/Frontend_React_Movies/Frontend-Moviearts/src/Container/Components/userCard/UserCard.scss
+++ b/Frontend_React_Movies/Frontend-Moviearts/src/Container/Components/userCard/UserCard.scss
@@ -1,8 +1,14 @@
 .cardUser{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     border: 1px solid #eee;
-    box-shadow: 0  5px 5px rgba($color: #000000, $alpha: 0.1);
-    width: auto;
+    box-shadow: 0 5px 5px rgba($color: #000000, $alpha: 0.1);
+    width: 15em;
     padding: 10px 15px;
     border-radius: 15px;
-    
+    margin-bottom: 1em;
+    .delete {
+        margin-left: 100%;
+    }
 }
